<resources>
    <string name="app_name">Health Monitor App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_user">Welcome User</string>
    <string name="account_creation">Account Creation</string>
    <string name="username">Username</string>
    <string name="check">Check</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="change_username">Change Username</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="account_deletion">Account Deletion</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="name">Name</string>
    <string name="calorie_per_minute">Calorie per Minute</string>
    <string name="this_app_was_created_to_monitor_the_sleeping_and_exercise_schedule_of_the_user_to_maintain_their_health">This app was created to monitor the sleeping and exercise schedule of the user to maintain their health</string>
    <string name="guest">Guest</string>
    <string name="guest_login">Guest Login</string>
    <string name="no_music_playing">No Music Playing</string>
    <string name="songs">Songs</string>
    <string name="playlists">Playlists</string>
    <string name="statistics">Statistics</string>
    <string name="list">List</string>
    <string name="chart">Chart</string>
    <string name="calendar">Calendar</string>
    <string name="logs">Logs</string>
    <string name="sleep">Sleep</string>
    <string name="music">Music</string>
    <string name="sport">Sport</string>
    <string name="info">Info</string>
    <string name="text">Text</string>
    <string name="sport_type">Sport Type</string>
    <string name="all_songs">All Songs</string>
    <string name="playlist_songs">Playlist Songs</string>
    <string name="app_info">App Info</string>
    <string name="date_created">Date Created</string>
    <string name="_01_12_2022">01/12/2022</string>
    <string name="version">Version</string>
    <string name="_1_0">1.0</string>
    <string name="creator">Creator</string>
    <string name="tan_zhun_xian">Tan Zhun Xian</string>
    <string name="description">Description</string>
    <string name="health_monitor_app">Health Monitor App</string>
    <string name="new_user">New User</string>
    <string name="new_string">New</string>
    <string name="print_logs">Print Logs</string>
    <string name="activity_log">Activity Log</string>
    <string name="log">Log</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="playlist">Playlist</string>
    <string name="save">Save</string>
    <string name="return_string">Return</string>
    <string name="sleep_schedule">Sleep Schedule</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="sleep_time">Sleep Time</string>
    <string name="wake_time">Wake Time</string>
    <string name="sleep_duration">Sleep Duration</string>
    <string name="dash">-</string>
    <string name="sport_schedule">Sport Schedule</string>
    <string name="sport_duration">Sport Duration</string>
    <string name="select_duration">Select Duration</string>
    <string name="add_sport">Add Sport</string>
    <string name="sport_list">Sport List</string>
    <string name="edit">Edit</string>
    <string name="sport_calorie">Sport Calorie</string>
    <string name="length">Length</string>
    <string name="song_statistics">Song Statistics</string>
    <string name="total_playtime">Total Playtime</string>
    <string name="number_of_songs">Number of Songs</string>
    <string name="average_song_length">Average Song Length</string>
    <string name="longest_song_length">Longest Song Length</string>
    <string name="shortest_song_length">Shortest Song Length</string>
    <string name="playlist_statistics">Playlist Statistics</string>
    <string name="number_of_playlists">Number of Playlists</string>
    <string name="average_playlist_length">Average Playlist Length</string>
    <string name="average_playlist_song_count">Average Playlist Song Count</string>
    <string name="longest_playlist_length">Longest Playlist Length</string>
    <string name="shortest_playlist_length">Shortest Playlist Length</string>
    <string name="highest_playlist_song_count">Highest Playlist Song Count</string>
    <string name="lowest_playlist_song_count">Lowest Playlist Song Count</string>
    <string name="add">Add</string>
    <string name="more_info">More Info</string>
    <string name="total_sleep_time">Total Sleep Time</string>
    <string name="total_days">Total Days</string>
    <string name="longest_sleep_time">Longest Sleep Time</string>
    <string name="shortest_sleep_time">Shortest Sleep Time</string>
    <string name="average_sleep_time">Average Sleep Time</string>
    <string name="earliest_sleep_time">Earliest Sleep Time</string>
    <string name="latest_sleep_time">Latest Sleep Time</string>
    <string name="earliest_wake_time">Earliest Wake Time</string>
    <string name="latest_wake_time">Latest Wake Time</string>
    <string name="calorie">Calorie</string>
    <string name="music_name">Music Name</string>
    <string name="music_length">Music Length</string>
    <string name="title">Title</string>
    <string name="sport_name">Sport Name</string>
    <string name="total_time">Total Time</string>
    <string name="total_calorie">Total Calorie</string>
    <string name="average_time">Average Time</string>
    <string name="average_calorie">Average Calorie</string>
    <string name="longest_time">Longest Time</string>
    <string name="shortest_time">Shortest Time</string>
    <string name="most_calorie">Most Calorie</string>
    <string name="least_calorie">Least Calorie</string>
</resources>