<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for Sleep Statistics fragment -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.sleep.sleepStatistics.SleepStatisticsFragment"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_sleep_time"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="horizontal" />

            <!-- Text view to display total sleep time -->
            <TextView
                android:id="@+id/sleepTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_days"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="horizontal" />

            <!-- Text view to display total sleep days -->
            <TextView
                android:id="@+id/dayTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/longest_sleep_time"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="horizontal" />

            <!-- Text view to display longest sleep time -->
            <TextView
                android:id="@+id/sleepLongest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/shortest_sleep_time"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="horizontal" />

            <!-- Text view to display shortest sleep time -->
            <TextView
                android:id="@+id/sleepShortest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/average_sleep_time"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="horizontal" />

            <!-- Text view to display average sleep time -->
            <TextView
                android:id="@+id/sleepAverage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/earliest_sleep_time"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="horizontal" />

            <!-- Text view to display earliest sleep time -->
            <TextView
                android:id="@+id/sleepEarliest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/latest_sleep_time"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="horizontal" />

            <!-- Text view to display latest sleep time -->
            <TextView
                android:id="@+id/sleepLatest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/earliest_wake_time"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="horizontal" />

            <!-- Text view to display earliest wake time -->
            <TextView
                android:id="@+id/wakeEarliest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/latest_wake_time"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="horizontal" />

            <!-- Text view to display latest wake time -->
            <TextView
                android:id="@+id/wakeLatest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="vertical" />

    </LinearLayout>
</ScrollView>