<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for Music activity -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainActivities.MusicActivity">

    <LinearLayout
        android:id="@+id/mp3Player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mp3Controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Text view to show current song -->
            <TextView
                android:id="@+id/songName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:clickable="true"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/no_music_playing"
                android:textSize="24sp" />
            <requestFocus />

            <!-- Image button to play previous song -->
            <ImageButton
                android:id="@+id/songPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_previous"
                tools:ignore="SpeakableTextPresentCheck,ContentDescription" />

            <!-- Image button to play and pause song -->
            <ImageButton
                android:id="@+id/songPause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_pause"
                tools:ignore="SpeakableTextPresentCheck,ContentDescription" />

            <!-- Image button to play next song -->
            <ImageButton
                android:id="@+id/songNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_next"
                tools:ignore="SpeakableTextPresentCheck,ContentDescription" />

        </LinearLayout>

        <!-- Seek bar to view and change song progress -->
        <SeekBar
            android:id="@+id/songProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000"
            android:orientation="vertical" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/layoutMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mp3Player">

        <!-- Move to music list fragment -->
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songs" />

        <!-- Move to music playlists fragment -->
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists" />

        <!-- Move to music statistics fragment -->
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics" />
    </com.google.android.material.tabs.TabLayout>

    <!-- View pager to display music fragments -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpagerMusic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigator"
        android:layout_below="@id/layoutMusic" />

    <!-- Bottom navigator to navigate to other activity -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/design_default_color_primary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>